# te-challenge

./: .gitignore  Cargo.toml  README.md
src/: account.rs  engine.rs  main.rs  transaction.rs
tests/: expected.csv  test.csv
